Closed
Bug 1662525
Opened 5 years ago
Closed 5 years ago
Assertion failure: !mIsBeingDestroyed, at /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:4855
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | wontfix |
| firefox82 | --- | verified |
People
(Reporter: tsmith, Assigned: sefeng211)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: assertion, regression, testcase, Whiteboard: [bugmon:bisected,confirmed])
Attachments
(2 files)
Assertion failure: !mIsBeingDestroyed, at /builds/worker/checkouts/gecko/docshell/base/nsDocShell.cpp:4855
#0 0x7f7507b709f9 in AnnotateMozCrashReason /builds/worker/workspace/obj-build/dist/include/mozilla/Assertions.h:42:19
#1 0x7f7507b709f9 in nsDocShell::RefreshURI(nsIURI*, nsIPrincipal*, int, bool, bool) src/docshell/base/nsDocShell.cpp:4855:3
#2 0x7f7507b71911 in nsDocShell::SetupRefreshURIFromHeader(nsIURI*, nsIPrincipal*, unsigned long, nsTSubstring<char> const&) src/docshell/base/nsDocShell.cpp:5244:14
#3 0x7f7503f7bc99 in mozilla::dom::Document::SetHeaderData(nsAtom*, nsTSubstring<char16_t> const&) src/dom/base/Document.cpp:6131:18
#4 0x7f7503f90baf in mozilla::dom::Document::ProcessMETATag(mozilla::dom::HTMLMetaElement*) src/dom/base/Document.cpp:10268:7
#5 0x7f750584b9a5 in mozilla::dom::HTMLMetaElement::BindToTree(mozilla::dom::BindContext&, nsINode&) src/dom/html/HTMLMetaElement.cpp:106:9
#6 0x7f7503fbadd1 in mozilla::dom::Element::BindToTree(mozilla::dom::BindContext&, nsINode&) src/dom/base/Element.cpp:1599:19
#7 0x7f75058b89a6 in nsGenericHTMLElement::BindToTree(mozilla::dom::BindContext&, nsINode&) src/dom/html/nsGenericHTMLElement.cpp:419:43
#8 0x7f75041089eb in nsINode::InsertChildBefore(nsIContent*, nsIContent*, bool) src/dom/base/nsINode.cpp:1518:23
#9 0x7f750410d51e in nsINode::ReplaceOrInsertBefore(bool, nsINode*, nsINode*, mozilla::ErrorResult&) src/dom/base/nsINode.cpp:2689:14
#10 0x7f75045a589f in InsertBefore src/dom/base/nsINode.h:1974:12
#11 0x7f75045a589f in AppendChild src/dom/base/nsINode.h:1981:12
#12 0x7f75045a589f in mozilla::dom::Node_Binding::appendChild(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/NodeBinding.cpp:989:60
#13 0x7f7505315761 in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) src/dom/bindings/BindingUtils.cpp:3227:13
#14 0x7f75081b9e71 in CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&) src/js/src/vm/Interpreter.cpp:507:13
#15 0x7f75081b95e2 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) src/js/src/vm/Interpreter.cpp:599:12
#16 0x7f75081bb1af in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) src/js/src/vm/Interpreter.cpp:664:10
#17 0x7f75081aeb58 in CallFromStack src/js/src/vm/Interpreter.cpp:668:10
#18 0x7f75081aeb58 in Interpret(JSContext*, js::RunState&) src/js/src/vm/Interpreter.cpp:3336:16
#19 0x7f75081a53b3 in js::RunScript(JSContext*, js::RunState&) src/js/src/vm/Interpreter.cpp:468:13
#20 0x7f75081b959f in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) src/js/src/vm/Interpreter.cpp:636:13
#21 0x7f75081bb1af in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) src/js/src/vm/Interpreter.cpp:664:10
#22 0x7f75081bb38f in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) src/js/src/vm/Interpreter.cpp:681:8
#23 0x7f75082ca537 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) src/js/src/jsapi.cpp:2831:10
#24 0x7f750503bc18 in mozilla::dom::EventHandlerNonNull::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/EventHandlerBinding.cpp:276:37
#25 0x7f75056de981 in void mozilla::dom::EventHandlerNonNull::Call<nsCOMPtr<mozilla::dom::EventTarget> >(nsCOMPtr<mozilla::dom::EventTarget> const&, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/EventHandlerBinding.h:367:12
#26 0x7f75056ddab5 in mozilla::JSEventHandler::HandleEvent(mozilla::dom::Event*) src/dom/events/JSEventHandler.cpp:201:12
#27 0x7f75056c117e in mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*) src/dom/events/EventListenerManager.cpp:1088:22
#28 0x7f75056c1dd3 in mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool) src/dom/events/EventListenerManager.cpp:1279:17
#29 0x7f75056b7804 in HandleEvent /builds/worker/workspace/obj-build/dist/include/mozilla/EventListenerManager.h:354:5
#30 0x7f75056b7804 in mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) src/dom/events/EventDispatcher.cpp:356:17
#31 0x7f75056b6da1 in mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) src/dom/events/EventDispatcher.cpp:558:16
#32 0x7f75056b98c9 in mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) src/dom/events/EventDispatcher.cpp:1058:11
#33 0x7f7506b75fc7 in nsDocumentViewer::PageHide(bool) src/layout/base/nsDocumentViewer.cpp:1411:5
#34 0x7f7507b5c381 in nsDocShell::FirePageHideNotificationInternal(bool, bool) src/docshell/base/nsDocShell.cpp:1037:20
#35 0x7f7507b568b5 in FirePageHideNotification src/docshell/base/nsDocShell.cpp:1021:3
#36 0x7f7507b568b5 in nsDocShell::Destroy() src/docshell/base/nsDocShell.cpp:4186:9
#37 0x7f7507e3a8d0 in nsWebBrowser::SetDocShell(nsDocShell*) src/toolkit/components/browser/nsWebBrowser.cpp:1131:18
#38 0x7f7507e39eb2 in nsWebBrowser::InternalDestroy() src/toolkit/components/browser/nsWebBrowser.cpp:174:3
#39 0x7f7507e3dd6c in Destroy src/toolkit/components/browser/nsWebBrowser.cpp:855:3
#40 0x7f7507e3dd6c in non-virtual thunk to nsWebBrowser::Destroy() src/toolkit/components/browser/nsWebBrowser.cpp
#41 0x7f750632ef69 in mozilla::dom::BrowserChild::DestroyWindow() src/dom/ipc/BrowserChild.cpp:899:31
#42 0x7f750633d391 in mozilla::dom::BrowserChild::RecvDestroy() src/dom/ipc/BrowserChild.cpp:2320:3
#43 0x7f75031e5b95 in mozilla::dom::PBrowserChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PBrowserChild.cpp:6166:56
#44 0x7f7502c1d764 in mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) /builds/worker/workspace/obj-build/ipc/ipdl/PContentChild.cpp:8797:32
#45 0x7f7502a9b87e in mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) src/ipc/glue/MessageChannel.cpp:2150:25
#46 0x7f7502a97d75 in mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) src/ipc/glue/MessageChannel.cpp:2074:9
#47 0x7f7502a99402 in mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::MessageChannel::MessageTask&) src/ipc/glue/MessageChannel.cpp:1922:3
#48 0x7f7502a9a07b in mozilla::ipc::MessageChannel::MessageTask::Run() src/ipc/glue/MessageChannel.cpp:1953:13
#49 0x7f75021586f4 in mozilla::RunnableTask::Run() src/xpcom/threads/TaskController.cpp:242:16
#50 0x7f75021564bd in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) src/xpcom/threads/TaskController.cpp:512:26
#51 0x7f75021555f4 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) src/xpcom/threads/TaskController.cpp:371:15
#52 0x7f75021557a7 in mozilla::TaskController::ProcessPendingMTTask(bool) src/xpcom/threads/TaskController.cpp:168:36
#53 0x7f750215d1a9 in operator() src/xpcom/threads/TaskController.cpp:86:37
#54 0x7f750215d1a9 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_5>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:577:5
#55 0x7f7502170368 in nsThread::ProcessNextEvent(bool, bool*) src/xpcom/threads/nsThread.cpp:1234:14
#56 0x7f7502175d3a in NS_ProcessNextEvent(nsIThread*, bool) src/xpcom/threads/nsThreadUtils.cpp:513:10
#57 0x7f75062f5b7c in SpinEventLoopUntil<mozilla::ProcessFailureBehavior::ReportToCaller, (lambda at src/dom/ipc/ContentChild.cpp:1165:24)> /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:362:25
#58 0x7f75062f5b7c in mozilla::dom::ContentChild::ProvideWindowCommon(mozilla::dom::BrowserChild*, nsIOpenWindowInfo*, unsigned int, bool, bool, nsIURI*, nsTSubstring<char16_t> const&, nsTSubstring<char> const&, bool, bool, nsDocShellLoadState*, bool*, mozilla::dom::BrowsingContext**) src/dom/ipc/ContentChild.cpp:1165:5
#59 0x7f750632e673 in mozilla::dom::BrowserChild::ProvideWindow(nsIOpenWindowInfo*, unsigned int, bool, bool, nsIURI*, nsTSubstring<char16_t> const&, nsTSubstring<char> const&, bool, bool, nsDocShellLoadState*, bool*, mozilla::dom::BrowsingContext**) src/dom/ipc/BrowserChild.cpp:861:14
#60 0x7f750801b73f in nsWindowWatcher::OpenWindowInternal(mozIDOMWindowProxy*, nsTSubstring<char> const&, nsTSubstring<char> const&, nsTSubstring<char> const&, bool, bool, bool, nsIArray*, bool, bool, bool, nsPIWindowWatcher::PrintKind, nsDocShellLoadState*, mozilla::dom::BrowsingContext**) src/toolkit/components/windowwatcher/nsWindowWatcher.cpp:833:24
#61 0x7f750801e444 in nsWindowWatcher::OpenWindow2(mozIDOMWindowProxy*, nsTSubstring<char> const&, nsTSubstring<char> const&, nsTSubstring<char> const&, bool, bool, bool, nsISupports*, bool, bool, bool, nsPIWindowWatcher::PrintKind, nsDocShellLoadState*, mozilla::dom::BrowsingContext**) src/toolkit/components/windowwatcher/nsWindowWatcher.cpp:376:10
#62 0x7f7503ea9f95 in nsGlobalWindowOuter::OpenInternal(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, bool, bool, bool, bool, bool, nsIArray*, nsISupports*, nsDocShellLoadState*, bool, nsGlobalWindowOuter::PrintKind, mozilla::dom::BrowsingContext**) src/dom/base/nsGlobalWindowOuter.cpp:7296:21
#63 0x7f7503eac78f in OpenJS src/dom/base/nsGlobalWindowOuter.cpp:5862:10
#64 0x7f7503eac78f in nsGlobalWindowOuter::OpenOuter(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, mozilla::ErrorResult&) src/dom/base/nsGlobalWindowOuter.cpp:5826:17
#65 0x7f7503e7c25b in nsGlobalWindowInner::Open(nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, nsTSubstring<char16_t> const&, mozilla::ErrorResult&) src/dom/base/nsGlobalWindowInner.cpp:3853:3
#66 0x7f7504d76693 in mozilla::dom::Window_Binding::open(JSContext*, JS::Handle<JSObject*>, void*, JSJitMethodCallArgs const&) /builds/worker/workspace/obj-build/dom/bindings/WindowBinding.cpp:2706:59
#67 0x7f7505317253 in bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::MaybeCrossOriginObjectThisPolicy, mozilla::dom::binding_detail::ThrowExceptions>(JSContext*, unsigned int, JS::Value*) src/dom/bindings/BindingUtils.cpp:3227:13
#68 0x7f75081b9e71 in CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::CallReason, JS::CallArgs const&) src/js/src/vm/Interpreter.cpp:507:13
#69 0x7f75081b95e2 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) src/js/src/vm/Interpreter.cpp:599:12
#70 0x7f75081bb1af in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) src/js/src/vm/Interpreter.cpp:664:10
#71 0x7f75081aeb58 in CallFromStack src/js/src/vm/Interpreter.cpp:668:10
#72 0x7f75081aeb58 in Interpret(JSContext*, js::RunState&) src/js/src/vm/Interpreter.cpp:3336:16
#73 0x7f75081a53b3 in js::RunScript(JSContext*, js::RunState&) src/js/src/vm/Interpreter.cpp:468:13
#74 0x7f75081b959f in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct, js::CallReason) src/js/src/vm/Interpreter.cpp:636:13
#75 0x7f75081bb1af in InternalCall(JSContext*, js::AnyInvokeArgs const&, js::CallReason) src/js/src/vm/Interpreter.cpp:664:10
#76 0x7f75081bb38f in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>, js::CallReason) src/js/src/vm/Interpreter.cpp:681:8
#77 0x7f75082ca537 in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) src/js/src/jsapi.cpp:2831:10
#78 0x7f75050b8148 in mozilla::dom::Function::Call(mozilla::dom::BindingCallContext&, JS::Handle<JS::Value>, nsTArray<JS::Value> const&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&) /builds/worker/workspace/obj-build/dom/bindings/FunctionBinding.cpp:43:8
#79 0x7f7504074f5c in void mozilla::dom::Function::Call<nsCOMPtr<nsIGlobalObject> >(nsCOMPtr<nsIGlobalObject> const&, nsTArray<JS::Value> const&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*) /builds/worker/workspace/obj-build/dist/include/mozilla/dom/FunctionBinding.h:73:12
#80 0x7f7504074c38 in mozilla::dom::CallbackTimeoutHandler::Call(char const*) src/dom/base/TimeoutHandler.cpp:167:29
#81 0x7f7503e86ce9 in nsGlobalWindowInner::RunTimeoutHandler(mozilla::dom::Timeout*, nsIScriptContext*) src/dom/base/nsGlobalWindowInner.cpp:6081:38
#82 0x7f75040726cf in mozilla::dom::TimeoutManager::RunTimeout(mozilla::TimeStamp const&, mozilla::TimeStamp const&, bool) src/dom/base/TimeoutManager.cpp:915:44
#83 0x7f7504071c74 in mozilla::dom::TimeoutExecutor::MaybeExecute() src/dom/base/TimeoutExecutor.cpp:179:11
#84 0x7f75040736bf in mozilla::dom::TimeoutExecutor::Run() src/dom/base/TimeoutExecutor.cpp:234:5
#85 0x7f7502184fbf in mozilla::ThrottledEventQueue::Inner::ExecuteRunnable() src/xpcom/threads/ThrottledEventQueue.cpp:254:22
#86 0x7f7502180341 in mozilla::ThrottledEventQueue::Inner::Executor::Run() src/xpcom/threads/ThrottledEventQueue.cpp:81:15
#87 0x7f75021586f4 in mozilla::RunnableTask::Run() src/xpcom/threads/TaskController.cpp:242:16
#88 0x7f75021564bd in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) src/xpcom/threads/TaskController.cpp:512:26
#89 0x7f75021555f4 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) src/xpcom/threads/TaskController.cpp:371:15
#90 0x7f75021557a7 in mozilla::TaskController::ProcessPendingMTTask(bool) src/xpcom/threads/TaskController.cpp:168:36
#91 0x7f750215d136 in operator() src/xpcom/threads/TaskController.cpp:83:37
#92 0x7f750215d136 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_4>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:577:5
#93 0x7f7502170368 in nsThread::ProcessNextEvent(bool, bool*) src/xpcom/threads/nsThread.cpp:1234:14
#94 0x7f7502175d3a in NS_ProcessNextEvent(nsIThread*, bool) src/xpcom/threads/nsThreadUtils.cpp:513:10
#95 0x7f7502aa126f in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) src/ipc/glue/MessagePump.cpp:87:21
#96 0x7f7502a117b3 in MessageLoop::RunInternal() src/ipc/chromium/src/base/message_loop.cc:334:10
#97 0x7f7502a116cd in RunHandler src/ipc/chromium/src/base/message_loop.cc:327:3
#98 0x7f7502a116cd in MessageLoop::Run() src/ipc/chromium/src/base/message_loop.cc:309:3
#99 0x7f75068435d8 in nsBaseAppShell::Run() src/widget/nsBaseAppShell.cpp:137:27
#100 0x7f7508077713 in XRE_RunAppShell() src/toolkit/xre/nsEmbedFunctions.cpp:913:20
#101 0x7f7502aa2037 in mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) src/ipc/glue/MessagePump.cpp:237:9
#102 0x7f7502a117b3 in MessageLoop::RunInternal() src/ipc/chromium/src/base/message_loop.cc:334:10
#103 0x7f7502a116cd in RunHandler src/ipc/chromium/src/base/message_loop.cc:327:3
#104 0x7f7502a116cd in MessageLoop::Run() src/ipc/chromium/src/base/message_loop.cc:309:3
#105 0x7f75080772ec in XRE_InitChildProcess(int, char**, XREChildData const*) src/toolkit/xre/nsEmbedFunctions.cpp:744:34
#106 0x56374232b09f in content_process_main src/browser/app/../../ipc/contentproc/plugin-container.cpp:56:28
#107 0x56374232b09f in main src/browser/app/nsBrowserApp.cpp:303:18
Flags: in-testsuite?
| Reporter | ||
Comment 1•5 years ago
|
||
A Pernosco session is available here: https://pernos.co/debug/1Ff9dGYe24slJc8J03N1VQ/index.html
Updated•5 years ago
|
Whiteboard: [bugmon:bisected,confirmed]
Comment 2•5 years ago
|
||
Bugmon Analysis:
Verified bug as reproducible on mozilla-central 20200901214943-4a18696ce81f.
The bug appears to have been introduced in the following build range:
> Start: 330c4fd5259d03cd63291b5d235f35240f98010c (20200805163425)
> End: d6ead0115fc4be5b509adfc1b91ca2d17af4f1f4 (20200805163642)
> Pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=330c4fd5259d03cd63291b5d235f35240f98010c&tochange=d6ead0115fc4be5b509adfc1b91ca2d17af4f1f4
| Reporter | ||
Updated•5 years ago
|
Component: DOM: Navigation → DOM: Core & HTML
Flags: needinfo?(sefeng)
Updated•5 years ago
|
Has Regression Range: --- → yes
Comment 3•5 years ago
|
||
Set release status flags based on info from the regressing bug 1653474
status-firefox80:
--- → unaffected
status-firefox81:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Updated•5 years ago
|
Attachment #9173690 -
Attachment description: Bug 1662525 - Don't process meta tag if the docShell is being destroyed r=smaug → Bug 1662525 - Don't refresh uri if the docShell is being destroyed r=smaug
Updated•5 years ago
|
Keywords: regression
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/276a2b43a4df
Don't refresh uri if the docShell is being destroyed r=smaug
Comment 6•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•5 years ago
|
Comment 7•5 years ago
|
||
Bugmon Analysis:
Verified bug as fixed on rev mozilla-central 20200909093957-6cc2266faca2.
Removing bugmon keyword as no further action possible.
Please review the bug and re-add the keyword for further analysis.
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(sefeng)
Updated•5 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•