Bug 1662525 - Don't refresh uri if the docShell is being destroyed r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D89173